Mon Jan 31 00:09:11 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/SOCK_Dgram_Mcast.cpp: Updated the comments related to
	  the subscribe_ifs() return value of 1 to indicate why this is
 	  needed.  Thanks to Mark Boriac for motivating this.

	* etc/Svc_Conf_l.cpp.diff: The context diff was incorrectly
	  written, therefore, the wrong ACE_YY_BREAK was being commented
 	  out.  This is now fixed.  Thanks to David Levine for reporting
 	  this.

	* examples/Shared_Malloc/test_position_independent_malloc.cpp: 
	  Added a typedef to handle cases where
 	  ACE_HAS_POSITION_INDEPENDENT_MALLOC is not set.  Thanks to David
 	  Levine for reporting this.

	* examples/Service_Configurator/Misc/main.cpp (main): Changed
	  int i to size_t i to avoid complaint about signed/unsigned
 	  mismatch.  Thanks to David Levine for reporting this.

Sun Jan 30 12:35:20 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Token.cpp (remove_entry): <tail_> should point to <prev>
	  entry if we are removing the last entry in the queue.  Thanks to
	  Irfan for pointing this out.

Sat Jan 29 12:56:16 2000  bala  <bala@cs.wustl.edu>

        * ACE version 5.0.13 released.

Fri Jan 28 20:14:20 2000  Carlos O'Ryan  <coryan@uci.edu>

	* ace/RB_Tree.h:
	* ace/RB_Tree.i:
	  current_size() was not const.

Fri Jan 28 13:57:37 2000  Fred Kuhns    <fredk@cs.wustl.edu>

        * fixed QoS realted bugs in QoS_Session_Impl.cpp QoS_Session_Impl.h
          SOCK_Dgram_Mcast.cpp.  Just added some error checking and
          check errno after call to join_leaf.

Thu Jan 27 20:25:37 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/Token.cpp (shared_acquire and renew): Must decrement
	  <waiters_> in case of condition variable wait errors and
	  timeouts.

	* ace/TP_Reactor.cpp (handle_events): If the user gives us a
	  timeout, we must call <token_.acquire_read> with that timeout.
	  Also, we must be more careful when dealing with the return value